// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for color: background-base, hasLabel: false, compact: false and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: max(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.75 * 16px), 2px);
  padding: calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.8125 * 16px - 4px/2) max(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.8125 * 16px - 1px), 4px);
  margin: 0;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for color: background-base, hasLabel: false, compact: true and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: max(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.75 * 16px), 2px);
  padding: calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.8125 * 16px - 4px/2) max(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.8125 * 16px - 1px), 4px);
  margin: 0;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for color: background-base, hasLabel: true, compact: false and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: max(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.75 * 16px), 2px);
  padding: calc(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.8125 * 16px - 4px/2) - 6px) max(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.8125 * 16px - 1px), 4px);
  margin: 0;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for color: background-base, hasLabel: true, compact: true and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: max(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.75 * 16px), 2px);
  padding: calc(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.8125 * 16px - 4px/2) - 6px) max(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.8125 * 16px - 1px), 4px);
  margin: 0;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for color: background-surface, hasLabel: true, compact: false and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: max(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.75 * 16px), 2px);
  padding: calc(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.8125 * 16px - 4px/2) - 6px) max(calc(var(--p-internal-tag-dismissible-scaling, 1) * 0.8125 * 16px - 1px), 4px);
  margin: 0;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #EEEFF2;
  color: #010205;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for color: background-surface, hasLabel: true, compact: true and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: max(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.75 * 16px), 2px);
  padding: calc(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.8125 * 16px - 4px/2) - 6px) max(calc(var(--p-internal-tag-dismissible-scaling, calc(4 / 13)) * 0.8125 * 16px - 1px), 4px);
  margin: 0;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #212225;
  color: #FBFCFF;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
